made changes in meta tags

--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/imgs/icons8-movie-94.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/src/assets/imgs/icons8-movie-94.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Explore the latest movies and curate your own playlists. Perfect for movie lovers seeking their next watch!"
+    />
+
+    <!-- Open Graph Meta Tags -->
+    <meta
+      property="og:title"
+      content="Discover and Create Movie Playlists | Your Ultimate Movie Hub"
+    />
+    <meta
+      property="og:description"
+      content="Explore the latest movies and curate your own playlists. Perfect for movie lovers seeking their next watch!"
+    />
+    <meta
+      property="og:image"
+      content="https://movie-tambayan.vercel.app/src/assets/imgs/preview-image.png"
+    />
+    <meta property="og:url" content="https://movie-tambayan.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Discover and Create Movie Playlists | Your Ultimate Movie Hub"
+    />
+    <meta
+      name="twitter:description"
+      content="Explore the latest movies and curate your own playlists. Perfect for movie lovers seeking their next watch!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://movie-tambayan.vercel.app/src/assets/imgs/preview-image.png"
+    />
+
     <title>Movie Lounge</title>
   </head>
   <body>
